# qt-resources-istream

./: .gitignore  CMakeLists.txt  README.md  config.ini  foo.cpp  foo.hpp  main.cpp  qtapp.qrc
